<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_authorization_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorizationFragment">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="visible" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_reconnect"
        style="@style/ThemeOverlay.SurfaceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="Проблема с подключением"
            android:textAppearance="@style/LtechtestTextAppearance.Headline2" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/padding_large" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Обновить" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_very_large" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="115dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_very_large" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_medium"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title"
                style="@style/LtechtestTextAppearance.Headline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/enter_in_account" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_text_field_for_phone"
                style="@style/LtechtestTextAppearance.Body1Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/title_input_phone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_small" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_enter_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:expandedHintEnabled="false"
                tools:ignore="TouchTargetSizeCheck">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_enter_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:lines="1"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_error_text_field_for_phone_number"
                style="@style/LtechtestTextAppearance.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/error_input_password"
                android:textColor="@color/red"
                android:visibility="gone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_text_field_for_password"
                style="@style/LtechtestTextAppearance.Body1Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/title_input_password" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_small" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                tools:ignore="TouchTargetSizeCheck">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_enter_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_input_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_small" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_error_text_field_for_password"
                style="@style/LtechtestTextAppearance.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/error_input_password"
                android:textColor="@color/red"
                android:visibility="gone" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/padding_medium"
            android:text="@string/log_in" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>